--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "gh-pages": "^3.1.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^17.0.1",
     "react-audio-player": "^0.14.0",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "4.0.2",
+    "sort-by": "^1.2.0",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
   },
