--- a/_config.yaml
+++ b/_config.yaml
@@ -1,8 +1,1 @@
-markdown: GFM
-plugins:
-  - jekyll-relative-links
-relative_links:
-  enabled: true
-  collections: true
-include:
-  - index.md
+theme: jekyll-theme-minimal
