--- a/_config.yaml
+++ b/_config.yaml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
-title: Octocat's homepage
+title: Yihongs website
 description: maybe I'll post some things I find interesting
+markdown: GFM
