--- a/_config.yaml
+++ b/_config.yaml
@@ -2,3 +2,7 @@ theme: jekyll-theme-minimal
 title: Yihongs website
 description: maybe I'll post some things I find interesting
 markdown: GFM
+
+layout: test-page
+title: "test-page"
+permalink: /test-page
