--- a/_config.yaml
+++ b/_config.yaml
@@ -1,4 +1,6 @@
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/slate@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Yihongs website
 description: maybe I'll post some things I find interesting
 markdown: GFM
