--- a/_config.yaml
+++ b/_config.yaml
@@ -1,4 +1,4 @@
-remote_theme: jekyll/minima
+remote_theme: pages-themes/slate
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Yihongs website
