--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,6 @@
 remote_theme: pages-themes/slate
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
-title: Yihongs website
-description: maybe I'll post some things I find interesting
+title: Yi Hongs Liu
+description: website :)
 markdown: GFM
